@@ -1,3 +1,13 @@
+Fri Jul  5 16:01:21 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* test/ruby/test_regexp.rb
+	  (TestRegexp#test_options_in_look_behind)
+	  (TestRegexp#assert_match_at): Add tests for another problem
+	  fixed in Onigmo 5.13.5.  Previously Onigmo did not allow option
+	  enclosures in look-behind, which makes it impossible to
+	  interpolate a regexp into another in the middle of a look-behind
+	  pattern.  cf. https://github.com/k-takata/Onigmo/pull/17
+
 Fri Jul  5 12:14:40 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_notfound): after
@@ -19,7 +29,6 @@ Fri Jul  5 11:08:00 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 	  test/webrick.
 
 Fri Jul  5 09:53:15 2013  NARUSE, Yui  <naruse@ruby-lang.org>
-
 	* lib/mkmf.rb (CONFIG['CPPOUTFILE']): fix r41769; CONFIG['CPPOUTFILE']
 	  may be nil.
 
